# TidePilot

./: .eslintrc.cjs  .gitignore  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml
apps/web/: next.config.js  package.json  tailwind.config.ts
apps/web/src/: docker-compose.yml  middleware.ts
apps/web/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/actions/: comments.ts  index.ts  linkedin.ts  plan.ts  workspace.ts
apps/web/src/app/app/: ActionsPanel.tsx  BriefKpis.tsx  BriefSummaryCard.tsx  ExperimentsPanel.tsx  HookGenerator.tsx  HookIntelligencePanel.tsx  InsightCard.tsx  PredictiveScore.tsx  ReputationRiskPanel.tsx  SegmentResonancePanel.tsx  brief-action-toggle.tsx  brief-client.tsx  error.tsx  layout.tsx  page.tsx  post-suggestions-block.tsx
apps/web/src/app/app/analytics/: ContentTypeChart.tsx  TopicClusterChart.tsx  engagement-chart.tsx  page.tsx
apps/web/src/app/app/benchmark/: BenchmarkClient.tsx  page.tsx
apps/web/src/app/app/calendar/: CalendarView.tsx  page.tsx
apps/web/src/app/app/engagement/: RelationshipIntelligence.tsx  engagement-client.tsx  page.tsx
apps/web/src/app/app/goals/: page.tsx  (+1 more)
apps/web/src/app/learn/: page.tsx
apps/web/src/app/pricing/: page.tsx
apps/web/src/app/tools/: page.tsx
apps/web/src/components/: collaboration-presence.tsx  draft-comments.tsx  feature-guide.tsx  upgrade-prompt.tsx  voice-recorder.tsx
apps/web/src/hooks/: use-collaboration.ts
docs/: ARCHITECTURE.md  DEMO.md
scripts/: test-features.mjs  test-narrative-ideas-simulator.mjs
(+39 files in other folders)
